syntax = "proto3";

option java_package = "grpc.newService.Carbon";
option java_multiple_files = true;
option java_outer_classname = "CarbonServiceImpl";

service CarbonService {
	//unary
	rpc calculateCarbonFlight(CarbonFlightRequest) returns (CarbonFlightResponse){}
	rpc calculateCarbonDrive(CarbonDriveRequest) returns (CarbonFlightResponse){}
}





message CarbonFlightRequest {
	int32 hoursInput = 1; 	// 1 is just a tag/identifier, its not the contents of the variable
}

message CarbonDriveRequest {
   int32 milesInput = 1;
   int32 mpgInput 	= 2;
}



message CarbonFlightResponse {
	int32 carbonOutput = 1;
}


message CarbonDriveResponse {
	int32 carbonOutput = 1;
}
